--- a/test_polaris_catalog.ipynb
+++ b/test_polaris_catalog.ipynb
@@ -28,6 +28,8 @@
     "WAREHOUSE = 'SNOW_CATALOG'\n",
     "PRINCIPAL_ANALYST_ROLE = 'PRINCIPAL_ROLE'\n",
     "\n",
+    "#test commit\n",
+    "\n",
     "try:\n",
     "    spark = SparkSession.builder.appName('iceberg') \\\n",
     "        .config('spark.jars.packages', 'org.apache.iceberg:iceberg-spark-runtime-3.5_2.12:1.4.1,software.amazon.awssdk:bundle:2.20.160,software.amazon.awssdk:url-connection-client:2.20.160') \\\n",
